--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^3.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "riverskies/laravel-mobile-detect": "^1.3"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
