--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
-        "riverskies/laravel-mobile-detect": "^1.3"
+        "riverskies/laravel-mobile-detect": "^1.3",
+        "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
