--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.1",
+        "botman/botman": "2.8",
+        "botman/driver-web": "1.5",
+        "google/cloud-dialogflow": "0.23.0",
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.6",
