--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: laravel_app
+    working_dir: /var/www
     restart: unless-stopped
     volumes:
-      - .:/var/www/html
+      - .:/var/www
     ports:
       - "9000"
     environment:
