--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,34 +1,21 @@
 server {
     listen 80;
-    server_name localhost; # O el dominio que uses si lo vas a mapear
-
-    root /var/www/html/public; # Directorio público de Laravel
-
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
-
-    index index.html index.htm index.php;
-
-    charset utf-8;
+    index index.php index.html;
+    server_name localhost;
+    root /var/www/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    error_page 404 /index.php;
-
     location ~ \.php$ {
-        fastcgi_pass app:9000; # 'app' es el nombre del servicio PHP en docker-compose.yml
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
         include fastcgi_params;
     }
 
-    location ~ /\.(?!well-known).* {
+    location ~ /\.ht {
         deny all;
     }
 }
