--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "google/cloud-dialogflow": "0.23.0",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^10.0",
+        "laravel/horizon": "^5.33",
         "laravel/tinker": "^2.6",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
